--- a/iphone/Maps/LocalizedStrings/cs.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/cs.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Navigační režim pro auto ještě snadnější.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Více na Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Podrobnosti na Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Více recenzí na Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Připojte se k Internetu a získejte více informací o tomto místě.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Nepodařilo se načíst informace.";
