--- a/iphone/Maps/LocalizedStrings/da.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/da.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Bilnavigationstilstand er blevet lettere at bruge.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Mere på Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Detaljer på Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Flere anmeldelser på Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Opret forbindelse til internettet for at få flere oplysninger om stedet.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Kunne ikke indlæse oplysningerne.";
