--- a/iphone/Maps/LocalizedStrings/es.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/es.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Modo de navegación más fácil de usar.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Más información en Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Detalles en Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Más valoraciones en Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Conéctese a internet para obtener más información sobre este lugar.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "No se ha podido cargar la información.";
