--- a/iphone/Maps/LocalizedStrings/fi.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/fi.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Auton navigointitila on helppokäyttöisempi.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Lisää osoitteessa Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Lisätietoa osoitteessa Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Lisää arvosteluja osoitteessa Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Yhdistä internetiin saadaksesi lisätietoa paikasta.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Tietojen lataaminen epäonnistui.";
