--- a/iphone/Maps/LocalizedStrings/fr.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/fr.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Mode de navigation en voiture plus facile à utiliser.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Plus d'infos sur Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Détails sur Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Plus d'avis sur Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Connectez-vous à Internet pour obtenir plus d’informations sur ce lieu.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Impossible de charger les informations.";
