--- a/iphone/Maps/LocalizedStrings/hu.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/hu.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Az autós navigáció üzemmód használata egyszerűbb lett.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Továbbiak a Booking.com-on";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Részletek a Booking.com-on";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "További vélemények a Booking.com-on";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "A helyszínről további tájékoztatást kaphat, ha csatlakozik az internethez.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Nem sikerült betölteni az adatokat.";
