--- a/iphone/Maps/LocalizedStrings/id.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/id.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Mode navigasi mobil menjadi semakin mudah digunakan.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Selengkapnya di Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Perincian di Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Ulasan lain di Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Sambungkan ke internet untuk mendapatkan informasi selengkapnya tentang tempat ini.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Gagal memuat informasi.";
