--- a/iphone/Maps/LocalizedStrings/it.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/it.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Modalità di navigazione in auto più semplice da usare.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Altro su Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Dettagli su Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Altre recensioni su Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Connettiti a Internet per ottenere maggiori informazioni sul luogo.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Impossibile caricare le informazioni.";
