--- a/iphone/Maps/LocalizedStrings/ja.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ja.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "カーナビゲーションモードの使用がより簡単になりました。";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "さらに Booking.com で表示";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Booking.com で詳細表示";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Booking.com の詳細レビュー";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "この場所に関する詳細情報を取得するには、インターネットに接続してください。";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "情報の読み込みに失敗しました。";
