--- a/iphone/Maps/LocalizedStrings/ko.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ko.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "자동차 네비게이션 모드 사용이 더욱 쉬워졌습니다.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Booking.com의 추가 정보";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Booking.com의 세부 정보";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Booking.com의 추가 리뷰";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "인터넷에 연결하여 그곳에 대한 자세한 정보를 얻으세요.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "정보를 로드하지 못했습니다.";
