--- a/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Modusen for bilnavigering er blitt enklere å bruke.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Mer på Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Mer informasjon om Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Flere anmeldelser på Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Koble til internett for å få mer informasjon om stedet.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Kunne ikke laste inn informasjon.";
