--- a/iphone/Maps/LocalizedStrings/nl.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nl.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Modus autonavigatie is eenvoudiger te gebruiken.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Meer op Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Details op Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Meer beoordelingen op Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Maak verbinding met het internet om meer informatie over de plaats te krijgen.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Informatie laden mislukt.";
