--- a/iphone/Maps/LocalizedStrings/pt.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/pt.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "O modo de navegação do carro ficou mais fácil de utilizar.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Mais em Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Detalhes em Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Mais opiniões em Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Efetue ligação à internet para obter mais informações sobre o local.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Falha ao carregar informações.";
