--- a/iphone/Maps/LocalizedStrings/ro.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ro.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Modul de navigare din mașină este acum mai ușor de utilizat.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Mai multe pe Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Detalii pe Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Mai multe recenzii pe Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Conectați-vă la internet pentru a primi mai multe informații despre locație.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Încărcarea informațiilor a eșuat.";
