--- a/iphone/Maps/LocalizedStrings/sv.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/sv.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Bilens navigeringsläge är lättare att använda.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Mer på Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Information på Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Fler omdömen på Booking.com ";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Anslut till internet för att hämta mer information om platsen.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Det gick inte att ladda informationen.";
