--- a/iphone/Maps/LocalizedStrings/tr.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/tr.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Araç navigasyon modunu kullanmak şimdi çok daha kolay.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Booking.com hakkında daha fazla";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Booking.com hakkında detaylar";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Booking.com hakkında daha fazla değerlendirme";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Yerle ilgili daha fazla bilgi almak için internete bağlanın.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Bilgiler yüklenemedi.";
