--- a/iphone/Maps/LocalizedStrings/uk.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/uk.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Режим навігації став ще простішим.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Більше на Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Докладніше на Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Більше відгуків на Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Підключіться до мережі Інтернет, щоб отримати більше інформації про місце.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Не вдалося завантажити інформацію.";
