--- a/iphone/Maps/LocalizedStrings/vi.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/vi.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Chế độ điều hướng ô tô dễ sử dụng hơn.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Xem thêm trên Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Chi tiết trên Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Xem thêm đánh giá trên Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Kết nối đến Internet để xem thêm thông tin về địa điểm này.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Không thể tải thông tin.";
