--- a/iphone/Maps/LocalizedStrings/zh-Hans.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hans.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "汽车导航模式更加易用。";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Booking.com 上的更多信息";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Booking.com 上的详细信息";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Booking.com 上的更多评价";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "连接到互联网来获取关于地点的更多信息。";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "无法加载信息。";
