--- a/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "汽車導航模式更好用。";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Booking.com 上的更多資訊";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Booking.com 上的詳細資訊";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Booking.com 上的更多評價";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "連上網路以取得關於地點的更多資訊。";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "無法載入資訊。";
