--- a/android/res/values-ja/strings.xml
+++ b/android/res/values-ja/strings.xml
@@ -1060,4 +1060,9 @@
 	<string name="whatsnew_waypoints_message">場所をタップしてルートに経由地を追加します。</string>
 	<string name="whatsnew_driving_style_title">運転用の新しい地図のスタイル</string>
 	<string name="whatsnew_driving_style_message">カーナビゲーションモードの使用がより簡単になりました。</string>
+	<string name="more_on_bookingcom">さらに Booking.com で表示</string>
+	<string name="details_on_bookingcom">Booking.com で詳細表示</string>
+	<string name="reviews_on_bookingcom">Booking.com の詳細レビュー</string>
+	<string name="offline_place_page_more_information">この場所に関する詳細情報を取得するには、インターネットに接続してください。</string>
+	<string name="failed_load_information">情報の読み込みに失敗しました。</string>
 </resources>
