--- a/android/res/values-nl/strings.xml
+++ b/android/res/values-nl/strings.xml
@@ -1061,4 +1061,9 @@
 	<string name="whatsnew_waypoints_message">Tap op plaatsen om tussenstops toe te voegen aan uw route.</string>
 	<string name="whatsnew_driving_style_title">Nieuwe Kaartstijl voor het Rijden</string>
 	<string name="whatsnew_driving_style_message">Modus autonavigatie is eenvoudiger te gebruiken.</string>
+	<string name="more_on_bookingcom">Meer op Booking.com</string>
+	<string name="details_on_bookingcom">Details op Booking.com</string>
+	<string name="reviews_on_bookingcom">Meer beoordelingen op Booking.com</string>
+	<string name="offline_place_page_more_information">Maak verbinding met het internet om meer informatie over de plaats te krijgen.</string>
+	<string name="failed_load_information">Informatie laden mislukt.</string>
 </resources>
