--- a/android/res/values-pt/strings.xml
+++ b/android/res/values-pt/strings.xml
@@ -1060,4 +1060,9 @@
 	<string name="whatsnew_waypoints_message">Toque nos locais para adicionar pontos de caminho à sua rota.</string>
 	<string name="whatsnew_driving_style_title">Novo estilo de mapa para a condução</string>
 	<string name="whatsnew_driving_style_message">O modo de navegação do carro ficou mais fácil de utilizar.</string>
+	<string name="more_on_bookingcom">Mais em Booking.com</string>
+	<string name="details_on_bookingcom">Detalhes em Booking.com</string>
+	<string name="reviews_on_bookingcom">Mais opiniões em Booking.com</string>
+	<string name="offline_place_page_more_information">Efetue ligação à internet para obter mais informações sobre o local.</string>
+	<string name="failed_load_information">Falha ao carregar informações.</string>
 </resources>
