--- a/android/res/values-zh-rTW/strings.xml
+++ b/android/res/values-zh-rTW/strings.xml
@@ -1073,4 +1073,9 @@
 	<string name="whatsnew_waypoints_message">點按地點，即可向您的路線新增路徑點。</string>
 	<string name="whatsnew_driving_style_title">新的駕駛地圖模式</string>
 	<string name="whatsnew_driving_style_message">汽車導航模式更好用。</string>
+	<string name="more_on_bookingcom">Booking.com 上的更多資訊</string>
+	<string name="details_on_bookingcom">Booking.com 上的詳細資訊</string>
+	<string name="reviews_on_bookingcom">Booking.com 上的更多評價</string>
+	<string name="offline_place_page_more_information">連上網路以取得關於地點的更多資訊。</string>
+	<string name="failed_load_information">無法載入資訊。</string>
 </resources>
