--- a/iphone/Maps/LocalizedStrings/de.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/de.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Der Modus Autonavigation ist jetzt einfacher zu nutzen.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Mehr bei Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Einzelheiten bei Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Weitere Bewertungen bei Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Stellen Sie eine Verbindung zum Internet her, um weitere Informationen über den Ort zu erhalten.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Informationen konnten nicht geladen werden.";
