--- a/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
@@ -1835,12 +1835,12 @@
 
 "whatsnew_driving_style_message" = "Uproszczono tryb nawigacji pojazdu.";
 
-"more_on_bookingcom" = "More on Booking.com";
+"more_on_bookingcom" = "Więcej na Booking.com";
 
-"details_on_bookingcom" = "Details on Booking.com";
+"details_on_bookingcom" = "Szczegóły na Booking.com";
 
-"reviews_on_bookingcom" = "More reviews on Booking.com";
+"reviews_on_bookingcom" = "Więcej opinii na Booking.com";
 
-"offline_place_page_more_information" = "Connect to the internet to get more information about the place.";
+"offline_place_page_more_information" = "Połącz się z Internetem, aby uzyskać więcej informacji na temat miejsca.";
 
-"failed_load_information" = "Failed to load information.";
+"failed_load_information" = "Nie można załadować informacji.";
